--- a/Grundlagen elektronischer Publikationen/exercises/sheet2/Kochbuch/recipe01/index.xhtml
+++ b/Grundlagen elektronischer Publikationen/exercises/sheet2/Kochbuch/recipe01/index.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.1//EN"
-        "http://www.w3.org/TR/xhtml-basic/xhtml-basic11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+        "http://www.w3.org/MarkUp/DTD/xhtml-basic11.dtd">
+<html>
     <head>
         <title>
             Falafel recipe
@@ -17,8 +17,9 @@
             </ol>
         </div>
         <div id="Falafel">
-            <h1>Falafel</h1>
-            <pre>
+            <h1 style="background: #808080">Falafel</h1>
+
+            <pre style="color: #008000">
                 Zutaten:
 
                 250 g		Kichererbsen, getrocknet
@@ -48,7 +49,7 @@
 
 
                 <a href="http://www.chefkoch.de/rezepte/1985171321890621/Falafel-mit-Tahini-Sauce.html">Quelle: http://www.chefkoch.de/rezepte/1985171321890621/Falafel-mit-Tahini-Sauce.html</a><br/>
-                <a href="../index.xhtml#toc">Zurueck zum Inhaltsverzeichnis</a>
+                <a href="../index.xhtml">Zurueck zum Inhaltsverzeichnis</a>
             </pre>
         </div>
     </body>
