--- a/Grundlagen elektronischer Publikationen/exercises/sheet2/ex2.xhtml
+++ b/Grundlagen elektronischer Publikationen/exercises/sheet2/ex2.xhtml
@@ -17,7 +17,7 @@
             </ol>
         </div>
         <div id="Falafel">
-            <h1>Falafel</h1>
+            <h1 style="color: #808080">Falafel</h1>
             <pre>
                 Zutaten:
 
@@ -52,7 +52,7 @@
             </pre>
         </div>
         <div id="Rotes_Thai_Curry">
-            <h1>Rotes Thai-Curry</h1>
+            <h1 style="color: #a9a9a9">Rotes Thai-Curry</h1>
             <pre>
                 Zutaten:
 
@@ -88,7 +88,7 @@
             </pre>
         </div>
         <div id="Türkische_Linsensuppe">
-            <h1>Türkische Linsensuppe</h1>
+            <h1 style="color: #708090">Türkische Linsensuppe</h1>
             <pre>
                 Zutaten:
 
