--- a/Grundlagen elektronischer Publikationen/exercises/sheet2/Kochbuch/index.xhtml
+++ b/Grundlagen elektronischer Publikationen/exercises/sheet2/Kochbuch/index.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.1//EN"
-        "http://www.w3.org/TR/xhtml-basic/xhtml-basic11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+        "http://www.w3.org/MarkUp/DTD/xhtml-basic11.dtd">
+<html>
     <head>
         <title>
             Recipes
@@ -11,9 +11,9 @@
         <div id="toc">
             <h1>Inhaltsverzeichnis</h1>
             <ol>
-                <li><a href="recipe01/index.xhtml#Falafel">Falafel</a></li>
-                <li><a href="recipe02/index.xhtml#Rotes_Thai_Curry">Rotes Thai Curry</a></li>
-                <li><a href="recipe03/index.xhtml#Türkische_Linsensuppe">Türkische Linsensuppe</a></li>
+                <li><a style="color: #808080" href="recipe01/index.xhtml#Falafel">Falafel</a></li>
+                <li><a style="color: #a9a9a9" href="recipe02/index.xhtml#Rotes_Thai_Curry">Rotes Thai Curry</a></li>
+                <li><a style="color: #d3d3d3" href="recipe03/index.xhtml#Türkische_Linsensuppe">Türkische Linsensuppe</a></li>
             </ol>
         </div>
     </body>
