--- a/Grundlagen elektronischer Publikationen/exercises/sheet2/Kochbuch/recipe02/index.xhtml
+++ b/Grundlagen elektronischer Publikationen/exercises/sheet2/Kochbuch/recipe02/index.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.1//EN"
-        "http://www.w3.org/TR/xhtml-basic/xhtml-basic11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+        "http://www.w3.org/MarkUp/DTD/xhtml-basic11.dtd">
+<html>
     <head>
         <title>
             Falafel recipe
@@ -17,8 +17,9 @@
             </ol>
         </div>
         <div id="Rotes_Thai_Curry">
-            <h1>Rotes Thai-Curry</h1>
-            <pre>
+            <h1 style="background: #808080">Rotes Thai-Curry</h1>
+
+            <pre style="color: #663300">
                 Zutaten:
 
                 150 g 		Basmatireis
