--- a/Grundlagen elektronischer Publikationen/exercises/sheet2/Kochbuch/recipe03/index.xhtml
+++ b/Grundlagen elektronischer Publikationen/exercises/sheet2/Kochbuch/recipe03/index.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.1//EN"
-        "http://www.w3.org/TR/xhtml-basic/xhtml-basic11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+        "http://www.w3.org/MarkUp/DTD/xhtml-basic11.dtd">
+<html>
     <head>
         <title>
             Falafel recipe
@@ -17,8 +17,9 @@
             </ol>
         </div>
         <div id="Türkische_Linsensuppe">
-            <h1>Türkische Linsensuppe</h1>
-            <pre>
+            <h1 style="background: ">Türkische Linsensuppe</h1>
+
+            <pre style="color: #ff0000">
                 Zutaten:
 
                 100 g 		Linsen, rote
